perf: apply Java API improvements (9-25)
- Use pre-compiled Pattern constants instead of String.matches() in
  JNoseCallable and JNoseCore (avoids regex recompilation on every call)
- Replace FileInputStream with Files.newInputStream() in TestSmellDetector
- Use String.formatted() instead of String.format() in TestSmell
- Add missing Pattern and Path imports